# Cura

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: DESIGN.md
examples/: README.md  quickstart.py  run_cura_full_suite.sh  run_custom_endpoints.sh
examples/integrations/: README.md  claude-code.md  cline.md  hermes.md  roo-code.md
examples/integrations/codex/: config.toml
examples/integrations/openclaw/: openclaw.json
src/cura_eval/: __init__.py  cli.py  client.py  judge.py  loaders.py  mcq.py  rows.py
src/cura_eval/benchmarks/: __init__.py  healthbench.py  healthbench_professional.py  medxpertqa.py
src/cura_eval/benchmarks/agentclinic/: __init__.py  doctor.py  episode.py  images.py  npc.py  runner.py  scenarios.py
src/cura_eval/benchmarks/medagentbench/: __init__.py  fhir.py  loaders.py  refsol.py  runner.py  tools.py
tests/: conftest.py  test_agentclinic.py  test_benchmark_runners.py  test_client.py  test_judge.py  test_loaders.py  test_mcq.py  test_medagentbench.py  test_rows.py
